Possible compatibility problems with earlier versions marked with '*'.

Documentation about MARC decoding tools.

Fix --disable-tcpd to really disable tcpd. Patch by Robin H. Johnson.

--- 2.0.19 2004/03/30

Rename CHANGELOG to NEWS to follow GNU style packing.

Fix bug with missing initialization of member in init_diagnostics.
This bug affects threaded version of GFS server.

--- 2.0.18 2004/03/20

Use wrbuf_xmlputs_n instead of wrbuf_write_cdata to avoid clash with
Zebra symbol.

Ensure zlib.dll is packed with Windows install.

--- 2.0.17 2004/03/17

Fix encoding of xsd:string to use text instead of CDATA.

Fix endless loop in CQL parser with unbalanced ".

Use a more compact way to store MARC-8 conversion tables.

--- 2.0.16 2004/03/16 Debian only

Oleg Kolobov Fixed a bug in yaz_iconv regarding conversion to
UCS4 / UCS4LE.

Update CQL parser to use new CQL 1.1 modifiers for booleans and
relations.

Add CQL test cases.

--- 2.0.15 2004/03/01

Another fix for decoding of XML packed records.

--- 2.0.14 2004/02/25

Fixes for Chunked encoding. White space not ignored after length spec.

Update NS and use default NS for SRW diagnostic elements.

--- 2.0.13 2004/02/23

Implement ZOOM_resultset_cache_reset which resets record cache.

Implement ZOOM_resultset_sort which sorts a result set.

Implement chunked HTTP transfer.

For SSL, use -lssl -lcrypto on systems that don't have pkg-config.

--- 2.0.12 2004/02/16

Added member 'schema' to bend_explain_rr structure so that backend
can specify explain record identifier. Defaults to Zeerex 2.0.

Fix encoding of OID's of form 1.0.X. Bug introduced in 2.0.11.

--- 2.0.11 2004/02/16

* SRW/SRU 1.1 updates: updated diagnostic in srw.h to use uri instead
of code.

Added init command for yaz-client which sends "extra" init request.

Fixed two bugs in OID codec - ber_oidc. Throw error when encoding/decoding
bad truncated OID. Fix decoding of OID X.Y... when X=2 and Y>39.
